[gd_scene load_steps=6 format=3 uid="uid://by41v10qinjbd"]

[ext_resource type="PackedScene" uid="uid://bgyoqda1ainwg" path="res://player.tscn" id="1_5prrw"]
[ext_resource type="PackedScene" uid="uid://rl6jmcas6mjc" path="res://number_list.tscn" id="3_7lp4n"]
[ext_resource type="Script" path="res://score_system.gd" id="4_eylt8"]
[ext_resource type="Script" path="res://main_timer.gd" id="5_umo41"]
[ext_resource type="Script" path="res://spawner.gd" id="6_0pew6"]

[node name="main" type="Node2D"]

[node name="number_list" parent="." instance=ExtResource("3_7lp4n")]
maxn = 8
minn = 2

[node name="player" parent="." instance=ExtResource("1_5prrw")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.3, 0.3)

[node name="Panel" type="Panel" parent="Camera2D"]
offset_left = -1896.0
offset_top = 856.0
offset_right = -1396.0
offset_bottom = 1056.0

[node name="spawner" type="Node2D" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("6_0pew6")
player = NodePath("../player")

[node name="ghost_timer" type="Timer" parent="spawner"]
wait_time = 4.0
autostart = true

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(216, -16)
polygon = PackedVector2Array(-48, 8, -48, 24, -88, 24, -88, 8)

[node name="score_system" type="Node" parent="."]
script = ExtResource("4_eylt8")

[node name="main_timer" type="Timer" parent="."]
wait_time = 300.0
autostart = true
script = ExtResource("5_umo41")

[node name="Panel" type="Panel" parent="main_timer"]
offset_left = -248.0
offset_top = -1072.0
offset_right = 252.0
offset_bottom = -772.0

[node name="Label" type="Label" parent="main_timer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(7, 7)
pivot_offset = Vector2(25, 25)
text = "9999"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="spawner/ghost_timer" to="spawner" method="_on_ghost_timer_timeout"]

[editable path="player"]
